# pyUser

./: .gitignore  LICENSE  Readme.md  setup.cfg
src/pyUser/: Admin.py  Base.py  BaseGroup.py  BaseUser.py  Group.py  User.py  __init__.py
tests/: test.py
