[metadata]
name = pyUser
version = 0.0.1
author = David Jäckel
author_email = void@gotovoid.de
description = A small, object-oriented management tool for libuser
long_description = file: README.md
long_description_content_type = text/markdown
#url = https://github.com/nomeme/pyUser
#project_urls =
#    Bug Tracker = https://github.com/nomeme/pyUser/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
